--- a/blog/templates/base.html
+++ b/blog/templates/base.html
@@ -13,10 +13,11 @@
     <title>{% block title %} 一个死宅的博客 {% endblock %}</title>
 
     <!-- Bootstrap Core CSS -->
-    <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
+    <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
 
     <!-- Custom CSS -->
-    <link href="{% static 'css/blog-home.css' %}" rel="stylesheet">
+    <link rel="stylesheet" href="{% static 'css/blog-home.css' %}" rel="stylesheet">
+    <link rel="stylesheet" href="{% static 'css/font-awesome.min.css' %}">
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -49,7 +50,7 @@
                         <a href="{% url 'blog:index' %}">首页</a>
                     </li>
                     <li>
-                        <a href="#">About Me</a>
+                        <a href="{% url 'blog:about' %}">About Me</a>
                     </li>
                     <li>
                         <a href="#">Chat</a>
@@ -68,7 +69,7 @@
         <footer>
             <div class="row">
                 <div class="col-lg-12">
-                    <p>Copyright &copy; Your Website 2014</p>
+                    <p>Copyright &copy; zequnfeng's blog 2016</p>
                 </div>
                 <!-- /.col-lg-12 -->
             </div>
